Bug 88819 - Printing using Postscript hangs
Summary: Printing using Postscript hangs
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
4.4.0.3 release
Hardware: x86-64 (AMD64) Linux (All)
: high normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.4.1
Keywords:
: 89022 89160 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-01-27 08:15 UTC by Matthew Francis
Modified: 2015-02-19 08:56 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Backtrace (4.5 master) (5.36 KB, text/plain)
2015-01-27 08:17 UTC, Matthew Francis
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Matthew Francis 2015-01-27 08:15:55 UTC
Observed on Ubuntu 14.04 / LO 4.4.0.2. Not reproduced on LO 4.3.5.2

This was observed using a cups-pdf virtual PDF printer, but I don't believe that it is specific to this.

Steps to reproduce
1. Create a blank Writer document
2. Type any small amount of random text
3. Open File - Print and select a printer
4. Open "Properties..." in the General tab
5. In the "Device" tab, set "Printer language type" to "Postscript Level 3"
6. Click "OK" in the Properties dialog
7. Click "OK" in the Print dialog

Expected result
- File prints

Actual result
- LO hangs with a "Printing" progress dialog open
Comment 1 Matthew Francis 2015-01-27 08:17:24 UTC
Created attachment 112819 [details]
Backtrace (4.5 master)

Breaking in with gdb gives the attached backtrace
Comment 2 Matthew Francis 2015-01-27 08:18:57 UTC
Bibisect results from 44:
 cbd5e771b8289518f03bcaee7f10db42736533d7 is the first bad commit
commit cbd5e771b8289518f03bcaee7f10db42736533d7
Author: Robinson Tryon <qubit@runcibility.com>
Date:   Tue Dec 2 16:44:28 2014 +0100

    source-hash-f9da47eb6a9affb7bb42eafe6637b8059a3b0015
    
    commit f9da47eb6a9affb7bb42eafe6637b8059a3b0015

# bad: [4a3091e95fa263d3e2dd81e56e83996f0bb12287] source-hash-2b5b04e1e62914bf0902dfd7943cdc44499c47a6
# good: [812c4a492375ac47b3557fbb32f5637fc89d60d9] source-hash-dea4a3b9d7182700abeb4dc756a24a9e8dea8474
git bisect start 'latest' 'oldest'
# good: [5d0dfb8e62ae61a240f8313c594d4560e7c8e048] source-hash-0c6cd530de13f80795881f61064f1bf1dcc4ea81
git bisect good 5d0dfb8e62ae61a240f8313c594d4560e7c8e048
# good: [7dfacd0b8bd828331d74c0f79de6e8924bc4e6a5] source-hash-f93ce4f7eb90093d0ea3115d0a1c614612676dbd
git bisect good 7dfacd0b8bd828331d74c0f79de6e8924bc4e6a5
# good: [a42da134cd542144fca7ba14cce86c2b409fc18a] source-hash-beadebc0f7eb5582fcb8dcb082d19afdf2751876
git bisect good a42da134cd542144fca7ba14cce86c2b409fc18a
# good: [038f586bf711ad77856916be954b6c02a5717eb1] source-hash-2ec4c8b07427af868e32e14aaefd20649c1135d6
git bisect good 038f586bf711ad77856916be954b6c02a5717eb1
# skip: [1c1bb47aa932531a0486c1af5460f7f7f3de510a] source-hash-16068663e2aa984388be5f774b8f1917c12bf6f3
git bisect skip 1c1bb47aa932531a0486c1af5460f7f7f3de510a
# skip: [3eb627eb6d3e4f8e40b2154b4eba649ebce8873b] source-hash-ec8688fa2a311ce5fb463ce7c321757d1c2d8a3b
git bisect skip 3eb627eb6d3e4f8e40b2154b4eba649ebce8873b
# good: [777b702a1fa5888067aad38d44751220dc0bf5cc] source-hash-f18fd73e287b781e953a3c4bfa05b55f39880a35
git bisect good 777b702a1fa5888067aad38d44751220dc0bf5cc
# good: [46e5c194e9f596dcd076c2c77e4c7136212b8758] source-hash-36ff1527c9cb20542d3097d123d221c40a356795
git bisect good 46e5c194e9f596dcd076c2c77e4c7136212b8758
# bad: [817d17c44366e01a42fb4cab3caed54d5d5d3b57] source-hash-272d330cec558040d87f8386aa7aaab67f8adab6
git bisect bad 817d17c44366e01a42fb4cab3caed54d5d5d3b57
# good: [34a0be9c37c982a3cb6aa39ae34e62beabdd2040] source-hash-06458fdeb862dc483dcac8107a5cc8c2da01a3f0
git bisect good 34a0be9c37c982a3cb6aa39ae34e62beabdd2040
# bad: [5e3b82d0ec3ad9bd56157084cd18d4d0427d388e] source-hash-30123b9559e2fb74c9db7d530c538a1c6dc7e32c
git bisect bad 5e3b82d0ec3ad9bd56157084cd18d4d0427d388e
# bad: [cbd5e771b8289518f03bcaee7f10db42736533d7] source-hash-f9da47eb6a9affb7bb42eafe6637b8059a3b0015
git bisect bad cbd5e771b8289518f03bcaee7f10db42736533d7
# first bad commit: [cbd5e771b8289518f03bcaee7f10db42736533d7] source-hash-f9da47eb6a9affb7bb42eafe6637b8059a3b0015
Comment 3 Matthew Francis 2015-01-27 09:29:17 UTC
(Having identified the commit in question, I am taking the liberty of setting this to NEW)

The hang seems to have been introduced by the below commit.
Adding Cc: to caolanm@redhat.com; Could you possibly take a look at this? Thanks


commit bbf3aa7f92c194c9cc4546c95706e6b28e0c070c
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Fri Nov 14 11:06:44 2014 +0000

    coverity#705989 silence Insecure temporary file
    
    and
    
    coverity#705983 Insecure temporary file
    
    Change-Id: I2a501f8114ddf8968381e1880263abaf9d1bdc6f
Comment 4 Caolán McNamara 2015-01-27 10:22:51 UTC
sigh
Comment 6 Caolán McNamara 2015-02-04 10:57:35 UTC
*** Bug 89022 has been marked as a duplicate of this bug. ***
Comment 7 jca6433 2015-02-11 21:43:08 UTC
Same symptoms as Matthew:
Same steps to reproduce
independent of which printer (HP, cups PDF)
Only with Postscript language.
LO freezes on print.
Comment 8 Buovjaga 2015-02-19 08:56:23 UTC
*** Bug 89160 has been marked as a duplicate of this bug. ***