Resolves: tdf#88819 printing with ps hangs

regression from

commit bbf3aa7f92c194c9cc4546c95706e6b28e0c070c
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Fri Nov 14 11:06:44 2014 +0000
    coverity#705989 silence Insecure temporary file
    and
    coverity#705983 Insecure temporary file

Change-Id: If580196322e68098adc38a9fdb775827843a9c30